# pdfzip

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: run_gui.py
src/pdfzip/: __init__.py  __main__.py  cli.py
src/pdfzip/core/: __init__.py  interleaver.py
src/pdfzip/gui/: __init__.py  app.py  log_panel.py  main_window.py  pdf_preview.py
tests/: conftest.py  test_interleaver.py
